@@ -42,6 +42,7 @@ Version 1.3.13+svn:
    * new menu option added to save replays manually
    * show damage statistics for the current turn in the statistics window
  * WML engine:
+   * new tag [text_input] for [message] (patch #921)
    * new tag [filter_vision] for Standard Unit Filter
    * it is now possible to play [sound] repeatedly using a "repeat" attribute
    * Added boolean variable disallow_observers= to side defination
@@ -68,6 +69,7 @@ Version 1.3.13+svn:
    * the MP server now always sends gzipped data
    * Rewrote the AI village assigning algorithm, instead of using brute force
      it now tries to optimize before resorting to brute force (bug #7215).
+   * parser exceptions are now displayed visually (patch #914)
 
 Version 1.3.13:
  * campaigns:
